tests/golden/compile-pass/std_format_print.rua
fn main() {
    let text = format("value = {}", 42);
    print("{}", text);
}
