tests/golden/compile-fail/arithmetic_mixed_string_int.rua
fn main() {
    let _x = "hello" + 1;
}
